# listonit

./: .gitignore  README.md  SYSTEM_PROMPT.md  cloudflare-tunnel.sh  docker-compose.yml  docker-seed.py
.context/: EPICS_AND_FEATURES_GUIDE.md  deploy-steps.md  deployment.md  project-plan.md
.context/epics/: INDEX.md
.context/epics/epic-1-core-list-management/: README.md
.context/epics/epic-2-item-management/: README.md
.context/epics/epic-3-sharing-collaboration/: README.md  addendum-1-direct-user-sharing.md  addendum-2-integration-tests.md
.context/epics/epic-5-user-experience/: README.md
.context/support/: s1.md  socket-refactor.md  websocket_architecture_analysis.md
backend/: .dockerignore  .env.example  API.md  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  config.py  database.py  entrypoint.sh  main.py  pyproject.toml  websocket_manager.py
backend/alembic/: env.py
backend/alembic/versions/: d4bab9901267_initial_schema_users_shopping_lists_.py
backend/api/: deps.py
backend/api/v1/: router.py
backend/api/v1/endpoints/: auth.py  items.py  lists.py  sync.py  users.py  ws.py
backend/auth/: __init__.py  dependencies.py  security.py
backend/models/: __init__.py  item.py  list_member.py  shopping_list.py  user.py
backend/repositories/: __init__.py  item_repository.py  list_repository.py
backend/schemas/: __init__.py  auth.py  item.py  list.py  sync.py
backend/scripts/: create_user.py  seed.py
backend/services/: __init__.py  item_service.py  list_service.py
client/: release.md
client/listonit/: .env.example  README.md  pubspec.yaml
(+124 files in other folders)
